--- a/pmo_hub/staticfiles/css/admin_fix.css
+++ b/pmo_hub/staticfiles/css/admin_fix.css
@@ -27,6 +27,15 @@
     white-space: nowrap;
 }
 
+.btn-no-wrap {
+    display: inline-block !important;
+    white-space: nowrap !important;
+    font-size:10px;
+    padding:1px 4px;
+    text-decoration:none;
+    margin-right:2px;
+}
+
 .select2-container {
     width: 100% !important;
     min-width: 300px;
