--- a/pmo_hub/templates/admin/base_site.html
+++ b/pmo_hub/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <style type="text/css">
+    <!-- <style type="text/css">
         /* Força contraste no botão de histórico do django-simple-history */
         .historylink {
             background-color: #264b5e !important; /* Azul Escuro */
@@ -24,25 +24,6 @@
         #content-main .object-tools a.historylink {
             color: #ffffff !important;
         }
-    </style>
-    {% if ENV_NAME %}
-    <div id="env-banner" style="
-        position: fixed;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: {{ ENV_COLOR }};
-        color: #000;
-        padding: 3px 40px;
-        font-size: 16px;
-        font-weight: bold;
-        z-index: 9999;
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;
-        pointer-events: none;
-    ">
-        AMBIENTE: {{ ENV_NAME }}
-    </div>
-    {% endif %}
+    </style> -->
 {% endblock %}
 
