--- a/pmo_hub/static/css/custom_admin.css
+++ b/pmo_hub/static/css/custom_admin.css
@@ -31,3 +31,10 @@
 .main-footer {
     display: none !important;
 }
+
+.ui-sortable-handle {
+    cursor: move;
+    width: 20px !important;
+    display: inline-block !important;
+    background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"><path d="M0 2h10v2H0zm0 4h10v2H0z" fill="%23999"/></svg>') no-repeat center center;
+}
