corrigido css do sortables para visualização correta

--- a/pmo_hub/static/css/custom_admin.css
+++ b/pmo_hub/static/css/custom_admin.css
@@ -1,19 +1,25 @@
 /* Força o texto "Histórico" a aparecer centralizado e com contraste */
 .historylink {
-    background-color: #2c5047 !important; /* Cor sólida */
-    color: #ffffff !important;           /* Texto Branco */
-    
+    background-color: #2c5047 !important;
+    /* Cor sólida */
+    color: #ffffff !important;
+    /* Texto Branco */
+
     /* Centralização */
     display: inline-flex !important;
-    justify-content: center !important;  /* Centraliza horizontalmente */
-    align-items: center !important;      /* Centraliza verticalmente */
+    justify-content: center !important;
+    /* Centraliza horizontalmente */
+    align-items: center !important;
+    /* Centraliza verticalmente */
     text-align: center !important;
-    
+
     /* Dimensionamento */
-    min-width: 120px !important;         /* Garante largura mínima para notar a centralização */
-    height: 35px !important;             /* Altura fixa para alinhar ao centro */
+    min-width: 120px !important;
+    /* Garante largura mínima para notar a centralização */
+    height: 35px !important;
+    /* Altura fixa para alinhar ao centro */
     padding: 0 15px !important;
-    
+
     border-radius: 4px !important;
     font-size: 8 !important;
     text-decoration: none !important;
@@ -32,7 +38,7 @@
     display: none !important;
 }
 
-.ui-sortable-handle {
+.sortable td.original p {
     cursor: move;
     width: 20px !important;
     display: inline-block !important;
